# TS-API

./: README.md  main.py  manage.py  pyproject.toml
dojo2406/: asgi.py  settings.py  urls.py  wsgi.py
vendas/: models.py  serializers.py  urls.py  views.py
vendas/migrations/: 0001_initial.py
vendas/templates/: home.html
